[package]
name = "msh3js_tauri"
version = "1.0.3"
description = "Three.js model viewer for MSH files (Mesh format for the classic Star Wars Battlefront games)"
authors = ["Landon Hull aka Calrissian97"]
license = "GPL-3.0"
repository = "https://github.com/Calrissian97/MSH3JS"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "msh3js_tauri_lib"
path = "src/msh3js_tauri_lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["devtools"] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
